// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`polarOrigin renders 0 1`] = `
Array [
  .c0 {
  polar-origin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders function 1`] = `
Array [
  .c0 {
  polar-origin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: has;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: has;
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders invalid theme path 1`] = `
Array [
  .c0 {
  polar-origin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders negative number 1`] = `
Array [
  .c0 {
  polar-origin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  polar-origin: July;
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-origin: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: July;
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-origin: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-origin: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-origin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    polar-origin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-origin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    polar-origin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-origin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-origin: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-origin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-origin: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  polar-origin: July;
}

@media May {
  .c0 {
    polar-origin: August;
  }
}

@media April {
  .c0 {
    polar-origin: September;
  }
}

@media January {
  .c0 {
    polar-origin: November;
  }
}

@media April {
  .c0 {
    polar-origin: August;
  }
}

@media June {
  .c0 {
    polar-origin: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: July;
}

@media May {
  .c0 {
    polar-origin: August;
  }
}

@media April {
  .c0 {
    polar-origin: September;
  }
}

@media January {
  .c0 {
    polar-origin: November;
  }
}

@media April {
  .c0 {
    polar-origin: August;
  }
}

@media June {
  .c0 {
    polar-origin: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    polar-origin: November;
  }
}

@media April {
  .c0 {
    polar-origin: January;
  }
}

@media January {
  .c0 {
    polar-origin: December;
  }
}

@media April {
  .c0 {
    polar-origin: April;
  }
}

@media June {
  .c0 {
    polar-origin: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    polar-origin: November;
  }
}

@media April {
  .c0 {
    polar-origin: January;
  }
}

@media January {
  .c0 {
    polar-origin: December;
  }
}

@media April {
  .c0 {
    polar-origin: April;
  }
}

@media June {
  .c0 {
    polar-origin: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    polar-origin: July;
  }
}

@media April {
  .c0 {
    polar-origin: August;
  }
}

@media January {
  .c0 {
    polar-origin: September;
  }
}

@media April {
  .c0 {
    polar-origin: November;
  }
}

@media June {
  .c0 {
    polar-origin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    polar-origin: July;
  }
}

@media April {
  .c0 {
    polar-origin: August;
  }
}

@media January {
  .c0 {
    polar-origin: September;
  }
}

@media April {
  .c0 {
    polar-origin: November;
  }
}

@media June {
  .c0 {
    polar-origin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    polar-origin: January;
  }
}

@media April {
  .c0 {
    polar-origin: December;
  }
}

@media January {
  .c0 {
    polar-origin: April;
  }
}

@media April {
  .c0 {
    polar-origin: May;
  }
}

@media June {
  .c0 {
    polar-origin: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    polar-origin: January;
  }
}

@media April {
  .c0 {
    polar-origin: December;
  }
}

@media January {
  .c0 {
    polar-origin: April;
  }
}

@media April {
  .c0 {
    polar-origin: May;
  }
}

@media June {
  .c0 {
    polar-origin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders postitive number 1`] = `
Array [
  .c0 {
  polar-origin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders string 1`] = `
Array [
  .c0 {
  polar-origin: July;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: July;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: June;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: June;
}

<div
    className="c0"
  />,
]
`;

exports[`polarOrigin renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`polarOrigin renders valid theme path 1`] = `
Array [
  .c0 {
  polar-origin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  polar-origin: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
